Add JWT validation error logging